Bug 337514 - Server List dialog doesn't preserve list order across restarts anymore
Summary: Server List dialog doesn't preserve list order across restarts anymore
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks: 337512
  Show dependency treegraph
 
Reported: 2014-07-16 22:43 UTC by Eike Hein
Modified: 2014-11-22 15:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-07-16 22:43:06 UTC
See title.
Comment 1 Eike Hein 2014-11-22 15:04:24 UTC
Git commit 25ad67f063b14a1908994c3330a0cb2950865987 by Eike Hein.
Committed on 22/11/2014 at 15:02.
Pushed by hein into branch 'frameworks'.

Fix network order getting jumbled across restarts.

KConfig::groupList() no longer reliably returns groups in the order
they're in the file, unlike kdelibs4.

M  +1    -1    src/application.cpp

http://commits.kde.org/konversation/25ad67f063b14a1908994c3330a0cb2950865987