Fix network order getting jumbled across restarts.

KConfig::groupList() no longer reliably returns groups in the order
they're in the file, unlike kdelibs4.

BUG:337514